8154239: -Xbootclasspath/a breaks exploded build

Correct exploded modules build system class path search for the boot loader

Reviewed-by: acorn, ccheung, hseigel, jiangli